--- a/css/patternBuilder.css
+++ b/css/patternBuilder.css
@@ -1,12 +1,12 @@
 #interface{
 	position:fixed;
-	padding:20px;
+	padding:10px;
 	left:20px;
-	top:20px;
+	top:2.5vh;
 	background-color: #FFF;
 	opacity: 0.9;
 	width:200px;
-	height:300px;
+	height:95vh;
 }
 
 #interface button{
