--- a/css/patternBuilder.css
+++ b/css/patternBuilder.css
@@ -1,15 +1,3 @@
-#interface{
-	position:fixed;
-	padding:10px;
-	left:20px;
-	top:2.5vh;
-	background-color: #FFF;
-	opacity: 0.98;
-	width:300px;
-	height:95vh;
-	overflow-y: hidden;
-}
-
 .noselect{
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Chrome/Safari/Opera */
@@ -56,4 +44,81 @@
 
 #interface button{
 	margin-bottom: 10px;
+}
+
+
+#default-grids #custom-grids{
+	float:left;
+}
+
+#grid-selection {
+	width:100%;
+	float: left;
+	max-height: 300px;
+	height:auto;
+	overflow-y: scroll;
+}
+
+ul{
+	width:100%;
+	float:left;
+	padding:0;
+}
+
+li{
+	box-sizing: border-box;
+	list-style-type: none;
+
+	width:50%;
+	margin:0;
+	background-color: #CCC;
+	float:left;
+}
+
+li:hover{
+	background-color: #EEE;
+	cursor:default;
+}
+
+.grid-selector{
+	float: left;
+	box-sizing: border-box;
+	border: 1px solid; 
+	width:40%;
+	margin: 5%;
+}
+
+.grid-selector button{
+	float:right;
+	opacity:1;
+}
+
+.delete-button{
+	position: relative;
+	background-image: url("../assets/images/delete.png");
+	background-size: 100%;
+	top:0;
+	float: right;
+	z-index: 2;
+	width:10px;
+	height:10px;
+}
+
+.delete-button:hover{
+	width:30px;
+	height:30px;
+}
+
+.highlight{
+	position:relative;
+	top:0;
+	z-index: 1;
+	background-color: #33FF22;
+	opacity: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.highlight:hover{
+	opacity:0.1;
 }
