--- a/css/patternBuilder.css
+++ b/css/patternBuilder.css
@@ -20,7 +20,8 @@
 	float: left;
 	overflow-y: scroll;
 	background-color: #EEE;
-
+	border: 1px solid;
+	border-top: none;
 }
 
 ul{
@@ -33,7 +34,7 @@ ul{
 li{
 	box-sizing: border-box;
 	list-style-type: none;
-
+	border-bottom: 1px solid;
 	border-radius: 10px 0px 0px 0px;
 	width:50%;
 	padding: 5px 10px 5px 10px;
@@ -49,6 +50,8 @@ li:hover{
 
 .selected{
 	background-color: #EEE;
+	border:1px solid;
+	border-bottom:none;
 }
 
 canvas:hover{
