imageAreaSelect functioning as a react component + tests

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,3 +6,5 @@
 @import './components/container';
 @import './components/page-header';
 @import './components/visibility';
+
+@import './components/image-area-selector';
