--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,4 +7,7 @@
 @import './components/page-header';
 @import './components/visibility';
 
+@import './components/grid-button';
 @import './components/image-area-selector';
+@import './components/pattern-display';
+@import './components/pattern-options-panel';
