--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -6,17 +6,23 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: $s-size 0;
+    align-content: center;
+    padding:0; 
+    height:$m-size * 1.5;
 }
 
 .header__home-link{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: $s-size;
     font-weight: 500;
     text-decoration: none;
+    padding:0;
+    margin:0;
 
     h1{
+        font-size: $m-size;
+        line-height: $m-size;
         margin:0;
+        padding:0;
     }
 }
